<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:summaryOn="@string/pref_show_true"
        android:summaryOff="@string/pref_show_false"
        android:title="@string/pref_show_bass_label"
        android:key="@string/pref_show_bass_key"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_range_default"
        android:summaryOn="@string/pref_show_true"
        android:summaryOff="@string/pref_show_false"
        android:title="@string/pref_show_mid_range_label"
        android:key="@string/pref_show_mid_range_key"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:summaryOn="@string/pref_show_true"
        android:summaryOff="@string/pref_show_false"
        android:title="@string/pref_show_treble_label"
        android:key="@string/pref_show_treble_key"/>

</PreferenceScreen>